--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.22",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.8.0",
@@ -31,6 +33,9 @@
     "lint-staged": "^12.3.3",
     "parcel": "^2.2.1",
     "prettier": "^2.5.1"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "babel": {
     "plugins": [
