--- a/package.json
+++ b/package.json
@@ -97,5 +97,5 @@
     "trailingComma": "all",
     "useTabs": false
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead, not ios_saf < 13"
 }
