--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
     "parcel": "^2.2.1",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.5"
   },
   "resolutions": {
     "styled-components": "^5"
