--- a/package.json
+++ b/package.json
@@ -77,7 +77,10 @@
     "plugins": [
       "react",
       "@typescript-eslint"
-    ]
+    ],
+    "rules": {
+      "react/react-in-jsx-scope": "off"
+    }
   },
   "prettier": {
     "arrowParens": "avoid",
