--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
+    "@parcel/transformer-svg-react": "^2.3.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.22",
@@ -32,7 +33,7 @@
     "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
-    "parcel": "^2.2.1",
+    "parcel": "^2.3.2",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   },
