--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["ES2015"],
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
     "paths": {
