--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@emotion/react": "^11.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
