--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "test": "yarn lint && yarn typecheck"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
+    "@emotion/react": "^11.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3",
     "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.7.2",
+    "@emotion/babel-plugin": "^11.11.0",
     "@parcel/transformer-svg-react": "^2.3.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -36,6 +36,7 @@
     "lint-staged": "^12.3.3",
     "parcel": "^2.10.3",
     "prettier": "^2.5.1",
+    "process": "^0.11.10",
     "typescript": "^5.3.2"
   },
   "resolutions": {
